fix: :lipstick: details component olympic chart misalignment

--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -34,14 +34,6 @@
   align-items: center;
   justify-content: center;
 
-  @media screen and (min-width: vars.$breakpoint-md) {
-    justify-content: end;
-
-    &:nth-child(2) {
-      justify-content: start;
-    }
-  }
-
   .chart-fact {
     min-width: 14rem;
   }
